--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "args-parser": "^1.1.0",
+    "json-colorz": "^0.2.7",
     "node-json-color-stringify": "^1.1.0",
     "redis": "^2.8.0"
   }
