--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "args-parser": "^1.1.0",
     "json-colorz": "^0.2.7",
+    "node-bash-title": "0.0.2",
     "redis": "^2.8.0"
   }
 }
